refactor: remove token requirement in getCNPJ
