# src/routes/auth.routes.js
@@ -5,6 +5,7 @@ const StoreController = require('../controllers/StoreController')
 
 const router = Router()
 router
+    .get("/api/stores/cnpj/info", StoreController.getCNPJ)
     .post("/api/users", UserController.register)
     .post("/api/stores", StoreController.register)
     .post("/api/login", AuthController.login)
