# src/swagger.json
@@ -505,6 +505,43 @@
                 "x-codegen-request-body-name": "body"
             }
         },
+        "/api/stores/cnpj/info": {
+            "get": {
+                "summary": "Get Info By CNPJ",
+                "tags": [
+                    "Stores"
+                ],
+                "parameters": [
+                    {
+                        "name": "cnpj",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {}
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "content": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {}
+                    }
+                },
+                "x-codegen-request-body-name": "body"
+            }
+        },
         "/api/stores": {
             "post": {
                 "summary": "Register",
@@ -629,48 +666,6 @@
                         "required": false,
                         "schema": {
                             "type": "array"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {}
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "content": {}
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "content": {}
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "content": {}
-                    }
-                },
-                "x-codegen-request-body-name": "body"
-            }
-        },
-        "/api/stores/cnpj/info": {
-            "get": {
-                "summary": "Get Info By CNPJ",
-                "tags": [
-                    "Stores"
-                ],
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ],
-                "parameters": [
-                    {
-                        "name": "cnpj",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 ],
